@startuml Domain
skinparam style strictuml
skinparam DefaultFontName Arial
skinparam DefaultFontSize 16
skinparam DefaultFontStyle bold
skinparam ArrowThickness 2.2
skinparam ArrowColor #gray
hide empty members


class "Builting" as building {
list: floors
add()
get_floors()
}

class "Floor" as floor {
list: rooms
int: level
get_area()
add()
get_rooms()


}

class "Room" as room {
int: floor
string: room_name
float: area
list: devices
add()
}

class "Device" as device {
string: id
string: model_name
string: supplier
sting: device_type
string: nickName
}

class "Sensor" as sensor {
string: unit
last_measurement()
historical_measurement()
is_sensor()
is_actuator()
}

Class "Actuators" as actuator {
is_actuator()
is_sensor()
get_state()
turn_on()
turn_off()
is_active()
}

Class "Actuators with sensor" as actuator_with_sensor {
is_actuator()
is_sensor()
}

Class "Measurement" as meas {
string : timestamp
float : value
string : unit
}

Class "State" as state {
bool : is_on
float : target_temperature
int : dim_level
}

Class "Smarthouse" as smarthouse {
register_floor()
register_room()
get_floors()
get_rooms()
get_area()
register_device()
get_devices()
get_device_by_id()
}

smarthouse "1" *-- "1..*" building : Contains

building "1" *-- "1..*" floor : Contains

floor "1" *-- "1..*" room  : Contains

room "1" *-- "1..*" device : Contains

room "1" <--  device : Located in

device  <--  sensor 

device  <--  actuator

device  <--  actuator_with_sensor 

sensor "1" *-- "0..*" meas : Produces

actuator "1" *-- "0..1" state : Sets

actuator_with_sensor "1" *-- "0..*" meas : Produces

actuator_with_sensor "1" *-- "0..1" state : Sets



@enduml